--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Aug 07 14:53:45 CEST 2020
-sdk.dir=/Users/dfinies/Library/Android/sdk
+#Sat Sep 05 08:04:44 CEST 2020
+sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
